<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    >

    <Button
        android:id="@+id/GETQR"
        android:layout_width="180dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/purple"
        android:drawableLeft="@drawable/ic_baseline_qr_code_scanner_24"
        android:drawablePadding="1dp"
        android:text="@string/get_qr_code"
        android:textColor="#000000"
        android:textSize="15sp"
        android:visibility="invisible"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip1"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />


    <com.google.android.material.chip.Chip
        android:id="@+id/chip1"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="90dp"
        android:checkable="true"
        android:padding="100dp"
        android:text="@string/Chip1_text"
        android:textAlignment="center"
        android:textSize="15sp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:chipIcon="@drawable/ic_baseline_location_on_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/TextIn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/point_de_d_part"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip1"
        app:startIconDrawable="@drawable/ic_baseline_location_on_24">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/choisissez_une_localisation" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/GETQR2"
        android:layout_width="180dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/purple"
        android:drawableLeft="@drawable/ic_baseline_qr_code_scanner_24"
        android:drawablePadding="1dp"
        android:text="@string/get_qr_code"
        android:textColor="#000000"
        android:textSize="15sp"
        app:cornerRadius="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip2"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="90dp"
        android:checkable="true"
        android:text="@string/Chip2_text"
        android:textAlignment="center"
        android:textSize="15sp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:chipIcon="@drawable/ic_baseline_location_on_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/TextIn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/point_de_d_arrivé"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip2"
        app:startIconDrawable="@drawable/ic_baseline_location_on_24">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/choisissez_une_localisation" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/GETMODEL"
        android:layout_width="187dp"
        android:layout_height="74dp"
        android:backgroundTint="@color/purple"
        android:drawableLeft="@drawable/ic_baseline_3d_rotation_24"
        android:drawablePadding="1dp"
        android:text="@string/get_3d_model"
        android:textColor="#000000"
        android:textSize="15sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextIn2"
        app:layout_constraintVertical_bias="0.181"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/buttonProfil"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/purple"
        android:drawableTop="@drawable/girl"
        android:text=""
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/buttonShowAll"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/purple"
        android:drawableTop="@drawable/map"
        android:text=""
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/global_news" />

    <Button
        android:id="@+id/buttonActu"
        android:layout_width="187dp"
        android:layout_height="74dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="76dp"
        android:backgroundTint="@color/purple"
        android:drawableLeft="@drawable/ic_baseline_directions_walk_24"
        android:text="@string/mur_d_actualit_s"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>